# figureitout

./: README.md
objdet/: CMakeLists.txt
objdet/src/: annotate_video.cpp  find_in_video.cpp  surf_detect.cpp
ros/: CMakeLists.txt  README.txt  ros2opencv.cpp  surf_detect.cpp  surf_detect.hpp
