cmake_minimum_required(VERSION 2.8)
project( annotate_video )
find_package( OpenCV REQUIRED )
find_package(Boost 1.4.0 COMPONENTS filesystem system REQUIRED)
include_directories(${Boost_INCLUDE_DIRS})
SET(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${PROJECT_SOURCE_DIR}/bin)
SET(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${PROJECT_SOURCE_DIR}/bin)
include_directories(${PROJECT_SOURCE_DIR}/include)
set(HEADER_FILES ${PROJECT_SOURCE_DIR}/include/surf_detect.hpp) 
add_executable( annotate_video src/annotate_video.cpp src/surf_detect.cpp ${HEADER_FILES})
add_executable(find_in_video ${HEADER_FILES} src/find_in_video.cpp src/surf_detect.cpp)
target_link_libraries( annotate_video ${OpenCV_LIBS} ${Boost_LIBRARIES})
target_link_libraries( find_in_video ${OpenCV_LIBS} ${Boost_LIBRARIES})

